--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,90 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SeOn Boutique</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff8e1;
+            color: #4a4a4a;
+        }
+        header {
+            background-color: #ffebcd;
+            text-align: center;
+            padding: 20px 0;
+        }
+        header h1 {
+            margin: 0;
+            color: #d2691e;
+        }
+        nav {
+            text-align: center;
+            background-color: #ffefd5;
+            padding: 10px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #d2691e;
+            font-weight: bold;
+        }
+        .content {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .about, .contact {
+            margin-bottom: 40px;
+        }
+        .contact ul {
+            list-style: none;
+            padding: 0;
+        }
+        .contact li {
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            background-color: #ffebcd;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        footer p {
+            margin: 0;
+            color: #d2691e;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>SeOn Boutique</h1>
+    </header>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="content">
+        <section id="about" class="about">
+            <h2>About Me</h2>
+            <p>SeOn is opened by date 22/05/2023. We have the specials clothes with best prices you can find around.</p>
+        </section>
+        <section id="contact" class="contact">
+            <h2>Contact</h2>
+            <ul>
+                <li>Instagram: <a href="https://instagram.com/seonboutique" target="_blank">seonboutique</a></li>
+                <li>TikTok: <a href="https://tiktok.com/@seon.boutique" target="_blank">seon.boutique</a></li>
+                <li>WhatsApp: <a href="tel:+0692101029">0692101029</a></li>
+            </ul>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2024 SeOn Boutique</p>
+    </footer>
+</body>
+</html>
